--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
   sqflite: ^2.0.3+1
+  idb_sqflite: ^1.1.1
+  sqflite_common_ffi: ^2.1.1+1
 
 dev_dependencies:
   flutter_test:
