--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.15
   sqflite: ^2.0.3+1
   package_info_plus: ^1.4.3+1
+  syncfusion_flutter_charts: ^20.2.50
 
 dev_dependencies:
   flutter_test:
