--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sqflite: ^2.0.3+1
   package_info_plus: ^1.4.3+1
   syncfusion_flutter_charts: ^20.2.50
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
