--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   package_info_plus: ^1.4.3+1
   syncfusion_flutter_charts: ^20.2.50
   provider: ^6.0.4
+  flutter_riverpod: ^2.3.7
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
