--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_riverpod: ^2.3.7
   flutter_dotenv: ^5.1.0
   go_router: ^10.1.0
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_test:
