--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   go_router: ^10.1.0
   uuid: ^4.0.0
+  fl_chart: ^0.63.0
 
 dev_dependencies:
   flutter_test:
